responsive slider fixed on tablet and pc screen

--- a/src/components/HeaderNav/headernav.scss
+++ b/src/components/HeaderNav/headernav.scss
@@ -36,7 +36,7 @@
     &-button {
         position: absolute;
         right: 2vh;
-        top: 4vh;
+        top: 3vh;
         background: none;
         color: vars.$white;
         border: 2px solid vars.$white;
@@ -53,7 +53,7 @@
     &-button--closed {
         position: absolute;
         right: 2vh;
-        top: 4vh;
+        top: 3vh;
         background: none;
         color: vars.$white;
         border: 2px solid vars.$white;
